--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
 
   <section class="event-details">
     <h2>Event Details</h2>
-    <p>Date: April 20, 2025</p>
-    <p>Time: 7:00 PM</p>
-    <p>Location: Secret Arena, Seoul</p>
+    <p>Date: April 19, 2025</p>
+    <p>Time: 6:00 PM</p>
+    <p>Location: #203,The Frontman's Residence</p>
   </section>
 
   <script>
