--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
     <p>Time: 6:45 PM</p>
     <p>Location: #203, The Frontman's Residence</p>
   </section>
-
+<div style="text-align: center; margin-top: 40px;">
+  <a href="instructions.html">
+    <button>View Game Instructions</button>
+  </a>
+</div>
   <script>
     async function getPlayerNumber() {
       const name = document.getElementById('nameInput').value.trim().toLowerCase();
