--- a/instructions.html
+++ b/instructions.html
@@ -149,8 +149,8 @@
     </div>
 
     <div class="game">
-      <h2>Transfer (Solo)</h2>
-      <p>With one hand, bounce a balloon continuously. With the other hand, transfer chocolates using a spoon to a container. Whoever transfers the most wins.</p>
+      <h2>Bounce and Transfer (Solo)</h2>
+      <p>With one hand, bounce a balloon continuously. With the other hand, transfer chocolates using a spoon to a container. Whoever transfers the most (in a certain time) without dropping the baloon wins.</p>
     </div>
 
     <div class="game">
