--- a/instructions.html
+++ b/instructions.html
@@ -139,29 +139,9 @@
 
   <div class="instructions">
     <div class="game">
-      <h2>Stop at Red (Solo)</h2>
-      <p>Players move only when the host’s back is turned. If caught moving when the host turns around, they're out. Last one standing wins.</p>
-    </div>
-
-    <div class="game">
-      <h2>Bottle Flip (Team)</h2>
-      <p>Each team must have every member land a bottle flip. The first team where all members succeed wins.</p>
-    </div>
-
-    <div class="game">
-      <h2>Bounce and Transfer (Solo)</h2>
-      <p>With one hand, bounce a balloon continuously. With the other hand, transfer chocolates using a spoon to a container. Whoever transfers the most (in a certain time) without dropping the baloon wins.</p>
-    </div>
-
-    <div class="game">
-      <h2>Floor Grid (Solo)</h2>
-      <p>Jump across a grid of tiles without stepping off the safe path. Fastest time or farthest distance without falling wins.</p>
-    </div>
-
-    <div class="game">
-      <h2>Reaction Grab (Team)</h2>
-      <p>Two players stand facing an object. When a cue is given, the fastest to grab it wins the round. Winning team scores a point.</p>
-    </div>
+      <h2>Lol Dream on......</h2>
+      <p>Haha</p>
+    
   </div>
 
   <div class="back-button">
